--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	    <link rel="stylesheet" href="css/font-awesome.min.css">
 	    <link rel="stylesheet" href="css/magnific-popup.css">
 		<link rel="stylesheet" href="css/main.css">
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 	
     <body class="homepage" marginwidth="0" marginheight="0">
@@ -28,10 +29,11 @@
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li class="current" style="white-space: nowrap;"><a href="index.html">Home</a></li>
-									<li class="opener" style="user-select: none; cursor: pointer; white-space: nowrap;"><a href="download.html">About</a></li>
-									<li style="white-space: nowrap;"><a href="testimonials.html">Video DIY Tutorials</a></li>
-									<li style="white-space: nowrap;"><a href="testimonials.html">Testimonials</a></li>
+									<li class="opener" style="user-select: none; cursor: pointer; white-space: nowrap;"><a href="#about">About</a></li>
+									<li style="white-space: nowrap;"><a href="#videos">Video DIY Tutorials</a></li>
+									<li style="white-space: nowrap;"><a href="#testimonials">Testimonials</a></li>
+                                    <li style="white-space: nowrap;"><a href="#services">Services</a></li>
+                                    <li style="white-space: nowrap;"><a href="#contact">Contact</a></li>
 								</ul>
 							</nav>
 
@@ -40,9 +42,8 @@
 
 			<!-- Intro -->
 				<div id="intro-wrapper" class="wrapper style1">
-					<div class="title">Mr. Michael's handyman service</div>
+					<div class="title" id="about">Mr. Michael's handyman service</div>
 					<section id="intro" class="container">
-						<p class="style1">So in case you were wondering what this is all about ...</p>
 						<p class="style2">
 							Are you looking for a qualified, trustworthy reliable handyman with over 24 years experience?
 						</p>
@@ -104,65 +105,106 @@
 									<div class="row">
 										<div class="6u 12u(mobile)">
 											<section>
-												<h3 class="icon fa-bar-chart"> Service </h3>
-												<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+												<h3 class="icon fa-gbp"> Free Estimates and Fixed Rates </h3>
+												<p> Get in touch today and receive a free estimate. Feel safe in the knowledge that my fee is fixed and you know all of the costs upfront before any work begins.</p>
 											</section>
 										</div>
 										<div class="6u 12u(mobile)">
 											<section>
-												<h3 class="icon fa-calculator"> Service </h3>
-												<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit.  </p>
-											</section>
-										</div>
-									</div>
-									<div class="row">
-										<div class="6u 12u(mobile)">
-											<section>
-												<h3 class="icon fa-refresh"> Service </h3>
-												<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit.  </p>
-											</section>
-										</div>
-										<div class="6u 12u(mobile)">
-											<section>
-												<h3 class="icon fa-filter"> Service </h3>
-												<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit.  </p>
+												<h3 class="icon fa-clock-o"> 9 AM - 6 PM 7 Days a week </h3>
+												<p> I work throughout the entire week to ensure that the maximum amount of time can be devoted to your ideas. </p>
 											</section>
 										</div>
 									</div>
 									<div class="row">
 										<div class="6u 12u(mobile)">
 											<section>
-												<h3 class="icon fa-sort-alpha-asc"> Service </h3>
-												<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit.  </p>
+												<h3 class="icon fa-ambulance"> 24 Hour Emergency callout </h3>
+												<p> For those times where you need help the most I will be there. </p>
 											</section>
 										</div>
 										<div class="6u 12u(mobile)">
 											<section>
-												<h3 class="icon fa-arrow-circle-down "> Service </h3>
-												<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit.  </p>
+												<h3 class="icon fa-smile-o"> Flexible, Friendly Service </h3>
+												<p> I work around you and what you need, see below for a full list of all work that I can do. </p>
 											</section>
 										</div>
 									</div>
 								</div>
 							</section>
-
 					</div>
+                    <div id="main" class="container">
+                        <!-- Features -->
+                            <section id="features">
+                                <header class="style1">
+                                    <h2 id="services">What can I do?</h2>
+                                        <div class="row">
+                                            <div class="6u 12u(mobile)">
+                                                <section>
+                                                        <p> Plumbing </p>
+                                                        <ul>
+                                                            <li> Applicances (Dishwashers, Washing machines etc.) </li>
+                                                            <li> Whole sink installs / Sink waste disposal unit </li>
+                                                            <li> Bathroom fitting </li>
+                                                            <li> New tap fitting </li>
+                                                            <li> Toilet fitting </li>
+                                                            <li> Water leaks </li>
+                                                            <li> Tiling </li>
+                                                        </ul>
+                                                </section>
+                                            </div>
+                                            <div class="6u 12u(mobile)">
+                                                <section>
+                                                        <p> Carpentry </p>
+                                                        <ul>
+                                                            <li> Replacing locks and handles </li>
+                                                            <li> Laminate and wood flooring </li>
+                                                            <li> Flat pack assembly </li>
+                                                            <li> Doors / Frames </li>        
+                                                            <li> Water leaks </li>
+                                                            <li> Shelving </li>
+                                                            <li> Tiling </li>
+                                                        </ul>
+                                                </section>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="6u 12u(mobile)">
+                                                <section>
+                                                    <p> Garden </p>
+                                                    <ul>
+                                                        <li> Repair and replacement of fencing </li>
+                                                        <li> General gardening </li>
+                                                        <li> Paitos </li>
+                                                    </ul>
+                                                </section>
+                                            </div>
+                                            <div class="6u 12u(mobile)">
+                                                <section>
+                                                    <p> Everything Else </p>
+                                                    <ul>
+                                                        <li> Repair and replacement of felt / tiled roofing </li>
+                                                        <li> Hanging Pictures and Mirrors </li>
+                                                        <li> Painting and Decorating </li>
+                                                        <li> Interior and Exterior </li>
+                                                        <li> Electrics </li>
+                                                        <li> Jet Wash </li>
+                                                    </ul>   
+                                                </section>
+                                            </div>
+                                        </div>
+                               
+                                </header>
+                            </section>
+                    </div>
 				</div>
 
 			<!-- Footer -->
 				<div id="footer-wrapper" class="wrapper">
-					<div class="title"><a name="contact_us"></a>Contact Us</div>
+					<div class="title" id="contact"><a name="contact_us"></a>Contact Mr. Michael</div>
 					<div id="footer" class="container">
-						<header class="style1">
-							<h2>Need more help?</h2>
-							<p>
-								Kindly, reach us on any of the following channels.
-							</p>
-						</header>
-						<hr>
 						<div class="row 150%">
 							<div class="6u 12u(mobile)">
-
 								<!-- Contact -->
 									<section class="feature-list small">
 										<div class="row">
